Full code cleanup.